tests/fsharp/typecheck/overloads/neg_at_somepoint_in_the_future_func-is-better-or-not.bsl

neg_at_somepoint_in_the_future_func-is-better-or-not.fsx(11,1,11,17): typecheck error FS0193: func is better on the way out, you'll need type annotation on the lambda literal to remove ambiguity
